# incredi-panel

./: Cargo.toml  README.md  rustfmt.toml
src/: anchor.rs  cli.rs  config.rs  dock.rs  error.rs  ipc.rs  lib.rs  main.rs  util.rs  window.rs
src/item/: command.rs  mod.rs  pulled.rs  scheduled_command.rs  text_item.rs
src/window/: command.rs  config.rs  draw.rs  grid.rs  mod.rs
