[package]
name = "incredi-panel"
version = "0.1.0"
authors = ["Misha Wagner <mishajw@gmail.com>"]

[dependencies]
yaml-rust = "*"
quick-xml = "*"
error-chain = "*"
log = "*"

# Use?
clap = "*"
regex = "*"
lazy_static = "*"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image", "ttf", "mixer", "gfx"]
